--- a/src/Raytha.Web/Raytha.Web.csproj
+++ b/src/Raytha.Web/Raytha.Web.csproj
@@ -36,8 +36,6 @@
     <UptoDateCheckInput Include="$(JsApplicationRoot)src\**\*" />
     <UptoDateCheckInput Remove="wwwroot\raytha_admin\js\src\controllers\backgroundtasks\status_controller.js" />
     <UptoDateCheckInput Remove="wwwroot\raytha_admin\js\src\controllers\contentitems\attachment_controller.js" />
-    <UptoDateCheckInput Remove="wwwroot\raytha_admin\js\src\controllers\contentitems\longtext_controller.js" />
-    <UptoDateCheckInput Remove="wwwroot\raytha_admin\js\src\controllers\contentitems\wysiwyg_controller.js" />
     <UptoDateCheckInput Remove="wwwroot\raytha_admin\js\src\controllers\navigationmenuitems\items_controller.js" />
     <UptoDateCheckInput Remove="wwwroot\raytha_admin\js\src\controllers\raythafunctions\codehighlighting_controller.js" />
     <UptoDateCheckInput Remove="wwwroot\raytha_admin\js\src\controllers\roles\autodisable_controller.js" />
@@ -45,6 +43,7 @@
     <UptoDateCheckInput Remove="wwwroot\raytha_admin\js\src\controllers\templates\codehighlighting_controller.js" />
     <UptoDateCheckInput Remove="wwwroot\raytha_admin\js\src\controllers\templates\uploadasset_controller.js" />
     <UptoDateCheckInput Remove="wwwroot\raytha_admin\js\src\controllers\themes\insertduplicate_controller.js" />
+    <UptoDateCheckInput Remove="wwwroot\raytha_admin\js\src\controllers\tiptap\tiptap_controller.js" />
     <UptoDateCheckInput Include="$(JsApplicationRoot)package.json" />
     <UpToDateCheckBuilt Include="$(JsApplicationBundleFile)" />
   </ItemGroup>
