--- a/src/Raytha.Web/wwwroot/raytha_admin/js/package.json
+++ b/src/Raytha.Web/wwwroot/raytha_admin/js/package.json
@@ -11,20 +11,64 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/cli": "^7.24.4",
     "@babel/core": "^7.24.4",
+    "@babel/plugin-transform-typescript": "^7.24.4",
     "@babel/preset-env": "^7.24.4",
+    "@babel/preset-typescript": "^7.24.4",
     "babel-loader": "^9.1.3",
     "css-loader": "^7.0.0",
     "file-loader": "^6.2.0",
     "style-loader": "^4.0.0",
+    "typescript": "^5.1.6",
     "vanillajs-datepicker": "^1.3.4",
     "webpack": "^5.91.0",
-    "webpack-cli": "^5.1.4"
+    "webpack-cli": "^5.1.4",
+    "@types/lodash": "^4.17.13",
+    "html-loader": "^5.1.0"
   },
   "dependencies": {
     "@hotwired/turbo": "^8.0.4",
     "@popperjs/core": "^2.11.8",
     "@stimulus-components/sortable": "^5.0.1",
+    "@tiptap/core": "^2.9.0",
+    "@tiptap/extension-blockquote": "^2.9.0",
+    "@tiptap/extension-bold": "^2.9.0",
+    "@tiptap/extension-bubble-menu": "^2.9.0",
+    "@tiptap/extension-bullet-list": "^2.9.0",
+    "@tiptap/extension-character-count": "^2.9.0",
+    "@tiptap/extension-code": "^2.9.0",
+    "@tiptap/extension-code-block": "^2.9.0",
+    "@tiptap/extension-color": "^2.9.0",
+    "@tiptap/extension-document": "^2.9.0",
+    "@tiptap/extension-font-family": "^2.9.0",
+    "@tiptap/extension-hard-break": "^2.9.0",
+    "@tiptap/extension-heading": "^2.9.0",
+    "@tiptap/extension-highlight": "^2.9.0",
+    "@tiptap/extension-history": "^2.9.0",
+    "@tiptap/extension-horizontal-rule": "^2.9.0",
+    "@tiptap/extension-image": "^2.9.0",
+    "@tiptap/extension-italic": "^2.9.0",
+    "@tiptap/extension-link": "^2.9.0",
+    "@tiptap/extension-list-item": "^2.9.0",
+    "@tiptap/extension-ordered-list": "^2.9.0",
+    "@tiptap/extension-paragraph": "^2.9.0",
+    "@tiptap/extension-strike": "^2.9.0",
+    "@tiptap/extension-subscript": "^2.9.0",
+    "@tiptap/extension-superscript": "^2.9.0",
+    "@tiptap/extension-table": "^2.9.0",
+    "@tiptap/extension-table-cell": "^2.9.0",
+    "@tiptap/extension-table-header": "^2.9.0",
+    "@tiptap/extension-table-row": "^2.9.0",
+    "@tiptap/extension-text": "^2.9.0",
+    "@tiptap/extension-text-align": "^2.9.0",
+    "@tiptap/extension-text-style": "^2.9.0",
+    "@tiptap/extension-typography": "^2.9.0",
+    "@tiptap/extension-underline": "^2.9.0",
+    "@tiptap/extension-youtube": "^2.9.0",
+    "@tiptap/extension-list-keymap": "^2.9.0",
+    "@tiptap/pm": "^2.9.0",
+    "@types/lodash": "^4.17.5",
     "@uppy/aws-s3": "^4.1.0",
     "@uppy/core": "^4.2.0",
     "@uppy/dashboard": "^4.1.0",
@@ -41,8 +85,6 @@
     "simplebar": "^6.2.5",
     "stimulus": "^3.2.2",
     "sweetalert2": "11.4.8",
-    "tinymce": "^7.0.0",
-    "trix": "^2.1.0",
     "uuid": "^10.0.0"
   }
 }
