Fixed ts errors.

--- a/src/Raytha.Web/wwwroot/raytha_admin/js/tsconfig.json
+++ b/src/Raytha.Web/wwwroot/raytha_admin/js/tsconfig.json
@@ -13,6 +13,7 @@
     "declarationDir": "dist/types",
     "declaration": true,
     "target": "ES5",
+    "module": "ES2015",
     "allowJs": true,
     "isolatedModules": true,
     "skipLibCheck": true,
