--- a/src/Raytha.Web/Raytha.Web.csproj
+++ b/src/Raytha.Web/Raytha.Web.csproj
@@ -11,6 +11,10 @@
     <PackageReference Include="Microsoft.AspNet.WebApi.Core" Version="5.3.0" />
     <PackageReference Include="Fluid.Core" Version="2.11.1" />
     <PackageReference Include="Fluid.ViewEngine" Version="2.11.1" />
+    <PackageReference Include="Microsoft.TypeScript.MSBuild" Version="5.6.2">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.8.0" />
     <PackageReference Include="Swashbuckle.Core" Version="5.6.0" />
     <PackageReference Include="System.Text.RegularExpressions" Version="4.3.1" />
