--- a/src/Raytha.Web/wwwroot/raytha_admin/js/package.json
+++ b/src/Raytha.Web/wwwroot/raytha_admin/js/package.json
@@ -16,16 +16,17 @@
     "@babel/plugin-transform-typescript": "^7.24.4",
     "@babel/preset-env": "^7.24.4",
     "@babel/preset-typescript": "^7.24.4",
+    "@types/lodash": "^4.17.13",
+    "@types/node": "^22.8.7",
     "babel-loader": "^9.1.3",
     "css-loader": "^7.0.0",
     "file-loader": "^6.2.0",
+    "html-loader": "^5.1.0",
     "style-loader": "^4.0.0",
-    "typescript": "^5.1.6",
+    "typescript": "^5.6.2",
     "vanillajs-datepicker": "^1.3.4",
     "webpack": "^5.91.0",
-    "webpack-cli": "^5.1.4",
-    "@types/lodash": "^4.17.13",
-    "html-loader": "^5.1.0"
+    "webpack-cli": "^5.1.4"
   },
   "dependencies": {
     "@hotwired/turbo": "^8.0.4",
@@ -51,6 +52,7 @@
     "@tiptap/extension-italic": "^2.9.0",
     "@tiptap/extension-link": "^2.9.0",
     "@tiptap/extension-list-item": "^2.9.0",
+    "@tiptap/extension-list-keymap": "^2.9.0",
     "@tiptap/extension-ordered-list": "^2.9.0",
     "@tiptap/extension-paragraph": "^2.9.0",
     "@tiptap/extension-strike": "^2.9.0",
@@ -66,9 +68,7 @@
     "@tiptap/extension-typography": "^2.9.0",
     "@tiptap/extension-underline": "^2.9.0",
     "@tiptap/extension-youtube": "^2.9.0",
-    "@tiptap/extension-list-keymap": "^2.9.0",
     "@tiptap/pm": "^2.9.0",
-    "@types/lodash": "^4.17.5",
     "@uppy/aws-s3": "^4.1.0",
     "@uppy/core": "^4.2.0",
     "@uppy/dashboard": "^4.1.0",
